src/styles/nav.scss
#nav-row{
  display: none;
  // background-color: #2F3242;

}

#nav-image{
  height: 15vh;
  width: 100vw;
  background-size: cover; /* or contain depending on what you want */
  background-position: center center;
  background-repeat: no-repeat;
  margin:auto;
  margin-left: -12px; // to offset padding of parent container
  padding: 0;
}

#logo{
margin-left: 0;
 width:70%;
 height:auto;
 display: flex;
 justify-content: left;
 max-width:300px;

 @media screen and (max-height: 700px) {

}
}

.search-form{
  display: flex;
  // flex-direction: row;
  justify-content: right;
  // align-items: right;
  align-items: center;
  margin-right: 5px;

  .form-box{
    width: 20vw;
     height:5vh;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     border-color: #505A34;
  }
}
#nav-items {
  // border: thin solid blue;
  width: 60%;
  height: 50%;
  margin-bottom: 5px;
}

#search-button {
  background-color: #505A34;
  border-color: #505A34;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

// #explore{
//     display: flex;
//     justify-content: space-evenly;
// }

#brand{
  color: #2F3242;
}

#alink {
  display: none;
}

.header-items-mobile {
  display: none;
}

@media only screen and (max-width: 990px) {
  #nav-row{
  display: flex;
  background-color: #2F3242;
}
  #brand{
  color: hsl(0, 10%, 88%);
}
  .header-items-mobile {
    display: flex;
    justify-content: space-evenly;

    .header-item{
      display: flex;
      justify-content: center;
      padding: 4px;
      margin-top: 8px;
      border-radius: 3px;
      color: white;
      transition: all 1s ease-out;
      background-color: #505A34;
    }

    .header-item:hover, header-item:active{
      background-color: white;
      color: #505A34;
      border: thin solid #505A34;
    }

    .g-link {
      border-bottom: 1px solid transparent;
    }

 #dropdown-about, #dropdown-background {
   display: inline-block;
   justify-content: center;
   padding: 4px;
   margin-top: 8px;
   border-radius: 3px;
   color: white;
   transition: all 1s ease-out;
   background-color: #505A34;
   border: none;
 }

 #dropdown-about:hover, #dropdown-background:hover, #dropdown-about:active, #dropdown-background:active {
   background-color: white;
   color: #505A34;
   border: thin solid #505A34;
 }

 #header-background-mobile{
        background-color: #505A34;
          .dropdown-link{
            color: white;
        }
        }
      .header-dropdown{
        margin-top: 10px;
    }
     #header-background-mobile:hover, #header-background-mobile:active{
            background-color: white;
            border: thin solid  #505A34;
              .dropdown-link{
            color:  #505A34;
  }
}
  }
}

@import "bootstrap";

